--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,6 +3,21 @@
 # Note the node:slim image doesn't have node-gyp
 FROM resin/%%RESIN_MACHINE_NAME%%-node:6.9.1-20161206
 
+# Install apt dependencies
+RUN apt-get update && apt-get install -y \
+  dnsmasq \
+  hostapd \
+  iproute2 \
+  iw \
+  libdbus-1-dev \
+  libexpat-dev \
+  rfkill \
+  bluetooth \
+  bluez \
+  libbluetooth-dev \
+  libudev-dev \
+  && rm -rf /var/lib/apt/lists/*
+
 # Defines our working directory in container
 RUN mkdir -p /usr/src/app/
 WORKDIR /usr/src/app
