--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "dependencies": {
     "node-red": "^0.15.2",
-    "node-red-contrib-kitra": "^0.1.2"
+    "node-red-contrib-artik": "0.0.12",
+    "node-red-contrib-artik-cloud": "^0.2.2",
+    "node-red-contrib-kitra": "^0.1.2",
+    "node-red-contrib-resinio": "0.0.1"
   },
   "devDependencies": {},
   "scripts": {}
