--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -28,8 +28,8 @@ WORKDIR /usr/src/app
 RUN curl https://bootstrap.pypa.io/ez_setup.py -o - | python
 
 # Install nrfutil extension
-RUN git clone https://github.com/NordicSemiconductor/pc-nrfutil && \
-  pip install -r requirements.txt && python setup.py install
+RUN git clone https://github.com/NordicSemiconductor/pc-nrfutil && cd pc-nrfutil && \
+  git checkout 0_5_2 && pip install -r requirements.txt && python setup.py install
 
 # Copies the package.json first for better cache on later pushes
 COPY ./app/package.json ./
