--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "nodered-kitra",
-  "version": "0.1.0",
-  "dependencies": {
-    "node-red": "^0.15.2",
-    "node-red-contrib-artik": "0.0.12",
-    "node-red-contrib-artik-cloud": "^0.2.2",
-    "node-red-contrib-kitra": "^0.1.2",
-    "node-red-contrib-resinio": "0.1.6"
-  },
-  "devDependencies": {},
-  "scripts": {}
+    "name": "nodered-kitra",
+    "version": "0.1.0",
+    "dependencies": {
+        "node-red": "^0.15.2",
+        "node-red-contrib-artik": "0.0.12",
+        "node-red-contrib-artik-cloud": "^0.2.2",
+        "node-red-contrib-kitra": "^0.1.2",
+        "node-red-contrib-resinio": "0.1.6",
+        "bbc-microbit": "^0.1.0",
+        "body-parser": "^1.15.2",
+        "compression": "^1.6.2",
+        "debug": "^2.3.3",
+        "express": "^4.14.0",
+        "hex2bin": "^1.0.2",
+        "lodash": "^4.17.2",
+        "mime": "^1.3.4",
+        "request": "^2.79.0"
+    },
+    "devDependencies": {},
+    "jshintConfig": {
+        "esnext": true,
+        "strict": true
+    },
+    "scripts": {}
 }
