--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -44,8 +44,8 @@ WORKDIR /usr/src/app/
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install -g node-red node-red-node-serialport node-red-contrib-kitra install node-red-contrib-artik node-red-contrib-artik-cloud node-red-contrib-resinio && \
-  npm cache clean && rm -rf /tmp/*
+RUN JOBS=MAX npm install -g node-red node-red-node-serialport node-red-contrib-kitra install node-red-contrib-artik node-red-contrib-artik-cloud node-red-contrib-resinio node-red-dashboard node-red-contrib-ui \
+  && npm cache clean && rm -rf /tmp/*
 
 # This will copy all files in our root to the working  directory in the container
 COPY ./app ./
